2009-01-09  Jason Rumney  <jasonr@gnu.org>

	* w32font.c (add_font_entity_to_list): Don't report unknown
	Windows charset as any unrecognized registry. (Bug#1548)
	Only report Unicode Plane 2 fonts as unicode-sip.

2009-01-09  Chong Yidong  <cyd@stupidchicken.com>

	* xfaces.c (Fx_font_family_list): Function deleted.  Compatibility
	version moved to faces.el.

	* font.c (Ffont_family_list): Return a list of strings, not
	symbols.

2009-01-09  Martin Rudalics  <rudalics@gmx.at>

	* frame.c (x_set_frame_parameters): Remember requested value for
	fullscreen before it's reset by the parameter handler.

2009-01-09  Glenn Morris  <rgm@gnu.org>

	* keyboard.c (last_command_char): For clarity, rename to...
	(last_command-event): ... and update all users.
	(last_input_char): For clarity, rename to...
	(last_input_event): ... and update all users.
	(last-command-char, last-input-char): Move to subr.el as aliases.
	* cmds.c, commands.h: Update for last_command_char rename.

2009-01-08  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (font_open_for_lface): Handle unspecified height
	attribute.

2009-01-08  Jason Rumney  <jasonr@gnu.org>

	* w32fns.c (Vx_pointer_shape, Vx_nontext_pointer_shape)
	(Vx_mode_pointer_shape, Vx_window_horizontal_drag_shape)
	(Vx_hourglass_pointer_shape, Vx_sensitive_text_pointer_shape):
	Don't declare.
	(syms_of_w32fns): Don't define x-pointer-shape variable. (Bug#1485)
	(x_create_tip_frame) [GLYPH_DEBUG]: Enable image debugging code.

2009-01-07  Kenichi Handa  <handa@m17n.org>

	* fileio.c (Finsert_file_contents): In the case of replace,
	remeber the coding system used for decoding in
	coding_system (Bug#1039).

	* coding.c (decode_coding_utf_8): Check byte_after_cr before
	breaking the loop.  (Bug#870)
	(decode_coding_utf_16, decode_coding_emacs_mule)
	(decode_coding_iso_2022, decode_coding_sjis, decode_coding_big5)
	(decode_coding_charset): Likewise.

2009-01-05  Martin Rudalics  <rudalics@gmx.at>
